--- a/PyBer_Challenge.ipynb
+++ b/PyBer_Challenge.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "Name: ride_id, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,62 +199,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "city\n",
-       "Barronchester    16\n",
-       "Bethanyland      18\n",
-       "Brandonfort      19\n",
-       "Colemanland      22\n",
-       "Davidfurt        17\n",
-       "Name: ride_id, dtype: int64"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#suburban_cities_df = pyber_data_df[pyber_data_df[\"type\"] == \"Suburban\"]\n",
-    "#suburban_ride_count = suburban_cities_df.groupby([\"city\"]).count()[\"ride_id\"]\n",
-    "#suburban_ride_count.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "city\n",
-       "Bradshawfurt      10\n",
-       "Garzaport          3\n",
-       "Harringtonfort     6\n",
-       "Jessicaport        6\n",
-       "Lake Jamie         6\n",
-       "Name: ride_id, dtype: int64"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#rural_cities_df = pyber_data_df[pyber_data_df[\"type\"] == \"Rural\"]\n",
-    "#ural_ride_count = rural_cities_df.groupby([\"city\"]).count()[\"ride_id\"]\n",
-    "#rural_ride_count.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
@@ -262,9 +206,9 @@
      "data": {
       "text/plain": [
        "type\n",
-       "Rural         537\n",
-       "Suburban     8570\n",
-       "Urban       59602\n",
+       "Rural         78\n",
+       "Suburban     490\n",
+       "Urban       2405\n",
        "Name: driver_count, dtype: int64"
       ]
      },
@@ -275,70 +219,13 @@
    ],
    "source": [
     "# 2. Get the total drivers for each city type\n",
-    "sum_drivers_by_type = pyber_data_df.groupby([\"type\"]).sum()[\"driver_count\"]\n",
-    "sum_drivers_by_type\n",
-    "#urban_driver_count = urban_cities_df.groupby([\"city\"]).count()[\"driver_count\"]\n",
-    "#urban_driver_count.head()\n",
-    "#urban_cities_df.sum(\"ride_id\",1)"
+    "sum_drivers_by_type = city_data_df.groupby([\"type\"]).sum()[\"driver_count\"]\n",
+    "sum_drivers_by_type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "city\n",
-       "Barronchester    16\n",
-       "Bethanyland      18\n",
-       "Brandonfort      19\n",
-       "Colemanland      22\n",
-       "Davidfurt        17\n",
-       "Name: driver_count, dtype: int64"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#suburban_driver_count = suburban_cities_df.groupby([\"city\"]).count()[\"driver_count\"]\n",
-    "#suburban_driver_count.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "city\n",
-       "Bradshawfurt      10\n",
-       "Garzaport          3\n",
-       "Harringtonfort     6\n",
-       "Jessicaport        6\n",
-       "Lake Jamie         6\n",
-       "Name: driver_count, dtype: int64"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#rural_driver_count = rural_cities_df.groupby([\"city\"]).count()[\"driver_count\"]\n",
-    "#rural_driver_count.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +238,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +268,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,52 +283,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. Get the average fare per driver for each city type.\n",
+    "avg_fare_per_driver = sum_fares_by_type / sum_drivers_by_type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Rides</th>\n",
+       "      <th>Total Drivers</th>\n",
+       "      <th>Total Fares</th>\n",
+       "      <th>Average Fare per Ride</th>\n",
+       "      <th>Average Fare per Driver</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rural</th>\n",
+       "      <td>125</td>\n",
+       "      <td>78</td>\n",
+       "      <td>4327.93</td>\n",
+       "      <td>34.623440</td>\n",
+       "      <td>55.486282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Suburban</th>\n",
+       "      <td>625</td>\n",
+       "      <td>490</td>\n",
+       "      <td>19356.33</td>\n",
+       "      <td>30.970128</td>\n",
+       "      <td>39.502714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Urban</th>\n",
+       "      <td>1625</td>\n",
+       "      <td>2405</td>\n",
+       "      <td>39854.38</td>\n",
+       "      <td>24.525772</td>\n",
+       "      <td>16.571468</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "type\n",
-       "Rural       8.059460\n",
-       "Suburban    2.258615\n",
-       "Urban       0.668675\n",
-       "dtype: float64"
+       "          Total Rides  Total Drivers  Total Fares  Average Fare per Ride  \\\n",
+       "type                                                                       \n",
+       "Rural             125             78      4327.93              34.623440   \n",
+       "Suburban          625            490     19356.33              30.970128   \n",
+       "Urban            1625           2405     39854.38              24.525772   \n",
+       "\n",
+       "          Average Fare per Driver  \n",
+       "type                               \n",
+       "Rural                   55.486282  \n",
+       "Suburban                39.502714  \n",
+       "Urban                   16.571468  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 5. Get the average fare per driver for each city type.\n",
-    "sum_fares_by_type / sum_drivers_by_type"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#  6. Create a PyBer summary DataFrame. \n",
-    "pyber_summary_df = pd.Dataframe(\n",
-    "    {'Total Rides': \n",
-    "    'Total Drivers'\n",
-    "    'Total Fares'\n",
-    "    'Average Fare per Ride'\n",
-    "    'Average Fare per Driver'}) "
+    "pyber_summary_df = pd.DataFrame(\n",
+    "    {'Total Rides': count_rides_by_type,\n",
+    "    'Total Drivers': sum_drivers_by_type,\n",
+    "    'Total Fares': sum_fares_by_type,\n",
+    "    'Average Fare per Ride': avg_fare_by_city_type,\n",
+    "    'Average Fare per Driver': avg_fare_per_driver}) \n",
+    "pyber_summary_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Rides</th>\n",
+       "      <th>Total Drivers</th>\n",
+       "      <th>Total Fares</th>\n",
+       "      <th>Average Fare per Ride</th>\n",
+       "      <th>Average Fare per Driver</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rural</th>\n",
+       "      <td>125</td>\n",
+       "      <td>78</td>\n",
+       "      <td>4327.93</td>\n",
+       "      <td>34.623440</td>\n",
+       "      <td>55.486282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Suburban</th>\n",
+       "      <td>625</td>\n",
+       "      <td>490</td>\n",
+       "      <td>19356.33</td>\n",
+       "      <td>30.970128</td>\n",
+       "      <td>39.502714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Urban</th>\n",
+       "      <td>1625</td>\n",
+       "      <td>2405</td>\n",
+       "      <td>39854.38</td>\n",
+       "      <td>24.525772</td>\n",
+       "      <td>16.571468</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Total Rides  Total Drivers  Total Fares  Average Fare per Ride  \\\n",
+       "Rural             125             78      4327.93              34.623440   \n",
+       "Suburban          625            490     19356.33              30.970128   \n",
+       "Urban            1625           2405     39854.38              24.525772   \n",
+       "\n",
+       "          Average Fare per Driver  \n",
+       "Rural                   55.486282  \n",
+       "Suburban                39.502714  \n",
+       "Urban                   16.571468  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#  7. Cleaning up the DataFrame. Delete the index name\n",
-    "pyber_summary_df.index.name = None"
+    "pyber_summary_df.index.name = None\n",
+    "pyber_summary_df"
    ]
   },
   {
@@ -462,11 +494,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Rides</th>\n",
+       "      <th>Total Drivers</th>\n",
+       "      <th>Total Fares</th>\n",
+       "      <th>Average Fare per Ride</th>\n",
+       "      <th>Average Fare per Driver</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rural</th>\n",
+       "      <td>125</td>\n",
+       "      <td>78</td>\n",
+       "      <td>4327.93</td>\n",
+       "      <td>34.623440</td>\n",
+       "      <td>55.486282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Suburban</th>\n",
+       "      <td>625</td>\n",
+       "      <td>490</td>\n",
+       "      <td>19356.33</td>\n",
+       "      <td>30.970128</td>\n",
+       "      <td>39.502714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Urban</th>\n",
+       "      <td>1625</td>\n",
+       "      <td>2405</td>\n",
+       "      <td>39854.38</td>\n",
+       "      <td>24.525772</td>\n",
+       "      <td>16.571468</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Total Rides  Total Drivers  Total Fares  Average Fare per Ride  \\\n",
+       "Rural             125             78      4327.93              34.623440   \n",
+       "Suburban          625            490     19356.33              30.970128   \n",
+       "Urban            1625           2405     39854.38              24.525772   \n",
+       "\n",
+       "          Average Fare per Driver  \n",
+       "Rural                   55.486282  \n",
+       "Suburban                39.502714  \n",
+       "Urban                   16.571468  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 1. Read the merged DataFrame\n"
+    "# 1. Read the merged DataFrame\n",
+    "pyber_summary_df.head()"
    ]
   },
   {
